# TIV

./: .gitignore  CMakeLists.txt  README.md
include/: extract_thumbnails.hpp  imageRectifier.h  main_rectangle.h
src/: extract_thumbnails.cpp  imageRectifier.cpp  main_center_mass.cpp  main_rectangle.cpp  main_test_opencv.cpp
